--- a/style/global.css
+++ b/style/global.css
@@ -1,5 +1,5 @@
 /* Questo file contiene gli stili grafici generali del sito */
-
+/*va finito*/
 /*Body*/
 body {
     background-color: rgb(128,35,50);
