--- a/style/global.css
+++ b/style/global.css
@@ -51,14 +51,28 @@ p1 {
 }
 p2 {
 
-    text-align:justify;
+    text-align: center;
     font-family: arial;
     font-size: 80%;
-    color:black;
+    color:white;
 }
 p3{
-  font-style: oblique;
-  font-weight: bold;
+	text-align: center;
+    font-family: arial;
+    font-size: 80%;
+    color:white;
+}
+p4{
+	text-align: center;
+    font-family: arial;
+    font-size: 80%;
+    color:white;
+}
+p5{
+	text-align: center;
+    font-family: arial;
+    font-size: 80%;
+    color:white;
 }
 /*celle di tabella*/
 td {
