Correzione errore specifiche CSS

--- a/style/global.css
+++ b/style/global.css
@@ -42,7 +42,7 @@ div {
     }
 
 
-/*Paragrafi*/
+/*div utilizzati per far comparire i posti occupati*/
 p1 {
     text-align: center;
     font-family: arial;
