Revert "Correzione errore specifiche CSS"
This reverts commit 5a1d9fe1234d9002950f50b7512dbb182a692560.

--- a/style/global.css
+++ b/style/global.css
@@ -42,7 +42,7 @@ div {
     }
 
 
-/*div utilizzati per far comparire i posti occupati*/
+/*Paragrafi*/
 p1 {
     text-align: center;
     font-family: arial;
