--- a/style/global.css
+++ b/style/global.css
@@ -50,6 +50,17 @@ p3{
 
   font-weight: bold;
 }
+/*just 4 footer*/
+p4{
+  text-align: center;
+  font: Courier;
+  font-size:70%;
+  color:black;
+}
+
+footer {
+  background-color: #dedede;
+}
 /*celle di tabella*/
 td {
     text-align:left;
@@ -62,7 +73,6 @@ td {
 a:link {
     color: red;
 }
-
 /* Se il link è già stato visitato */
 a:visited {
     color: rgb(128,35,50);
@@ -72,7 +82,6 @@ a:visited {
 a:hover {
     color: rgb(128,35,50);
 }
-
 /* Alla selezione, click del mouse */
 a:active {
     color: blue;
